--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+//    implementation 'com.google.firebase:firebase-firestore:18.2.0'‏
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
     implementation 'com.google.android.material:material:1.0.0-beta01'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
 
 }
+apply plugin: 'com.google.gms.google-services'
